<resources>
    <string name="app_name">Memento</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="action_settings">Help</string>
    <string name="title_activity_new_mournig_space">New mourning space</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="birth_date">Born on date</string>
    <string name="date_form">yyyy-mm-dd</string>
    <string name="name">Name</string>
    <string name="deceased_date">Decesed on date</string>
    <string name="title_activity_space_button">SpaceButton</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="message1">Name</string>
    <string name="icon_name">Name</string>
    <string name="title1">1</string>
    <string name="button">aButton</string>
    <string name="buttonadd">buttonAdd</string>
    <string name="write_memories">Write memories</string>
    <string name="visual_memories">Visual memories</string>
    <string name="add_media">add media</string>
    <string name="categories">Categories</string>
    <string name="in_memory_of">In memory of</string>
    <string name="cancel">Cancel</string>
    <string name="new_category">New category</string>
    <string name="share">Share</string>
    <string name="preview">Preview</string>
    <string name="scroll_view_of_media">scroll View of media</string>
    <string name="textview">TextView</string>
    <string name="post">Post</string>
    <string name="loadPostError">failed to load posts!</string>
    <string name="register">Register</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="invite_others">Invite others</string>
    <string name="send_invite">Send invite</string>
    <string name="date">Date</string>
    <string name="enter_code">Enter code</string>
    <string name="send">Send</string>
    <string name="can_invite_others">Can invite others</string>
    <string name="invite_error">Number does not belong to a registered user</string>
    <string name="pending_invites">Pending invites</string>
    <string name="disconnect_with_group">Disconnect with group</string>
    <string name="remove_space">Remove space</string>
</resources>