<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent" android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:context=".NewMourningSpaceFragment">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="180dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="180dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:theme="@style/TextLabel"
            android:textAppearance="@android:style/TextAppearance.Material.Menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="180dp"
            android:layout_height="71dp"
            android:layout_marginTop="4dp"
            android:hint="@string/birth_date"
            android:theme="@style/TextLabel"
            android:textAppearance="@android:style/TextAppearance.Material.Menu"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_form"
                android:textColor="@color/colorPrimaryDark"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="180dp"
            android:layout_height="71dp"
            android:layout_marginTop="4dp"
            android:hint="@string/deceased_date"
            android:theme="@style/TextLabel"
            android:textAppearance="@android:style/TextAppearance.Material.Menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/editName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/deceasedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_form"
                android:textColor="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>