<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InvitePopup">

    <com.santalu.maskedittext.MaskEditText
        android:id="@+id/mask_invite_phone"
        android:layout_width="267dp"
        android:layout_height="74dp"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388"
        app:met_mask="+46 (####) ## ## ##" />

    <Button
        android:id="@+id/send_invite_button"
        android:layout_width="151dp"
        android:layout_height="61dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="236dp"
        android:text="@string/send_invite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/contacts"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/mask_invite_phone"
        app:layout_constraintTop_toBottomOf="@+id/mask_invite_phone"
        app:layout_constraintVertical_bias="0.152" />

    <ImageView
        android:id="@+id/contacts"
        android:layout_width="66dp"
        android:layout_height="62dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/mask_invite_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mask_invite_phone"
        app:layout_constraintTop_toTopOf="@+id/mask_invite_phone"
        app:srcCompat="@drawable/ic_contacts" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/invite_other_switch"
        android:layout_width="178dp"
        android:layout_height="62dp"
        android:text="@string/can_invite_others"
        android:paddingStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/send_invite_button"
        app:layout_constraintEnd_toStartOf="@+id/send_invite_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/mask_invite_phone"
        app:layout_constraintTop_toTopOf="@+id/send_invite_button"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>