<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="multiply"
    tools:context=".NewMediaPopup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="10dp"
        tools:context=".NewMediaPopup">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/share"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintEnd_toStartOf="@+id/guideline15"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toTopOf="@+id/guideline16" />

        <Spinner
            android:id="@+id/categoriesDrop"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/categories"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            tools:listitem="@android:layout/select_dialog_multichoice" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_category"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/new_category"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="@+id/categoriesDrop"
            app:layout_constraintEnd_toStartOf="@+id/guideline12"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/categoriesDrop"
            app:layout_constraintVertical_bias="0.0" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/save"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintEnd_toStartOf="@+id/guideline17"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline14"
            app:layout_constraintTop_toTopOf="@+id/guideline9"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/guideline10"
            app:layout_constraintEnd_toStartOf="@+id/guideline12"
            app:layout_constraintStart_toEndOf="@+id/guideline17"
            app:layout_constraintTop_toTopOf="@+id/guideline9" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@android:drawable/divider_horizontal_dark"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toStartOf="@+id/guideline12"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toTopOf="@+id/guideline7"
            android:contentDescription="@string/preview" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.23" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.68" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.88" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.42" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.92" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.72" />

        <ImageButton
            android:id="@+id/add_media_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/add_media"
            android:src="@drawable/ic_image_gallery"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintEnd_toStartOf="@+id/guideline12"
            app:layout_constraintHorizontal_bias="0.837"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/addVideoButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/add_media"
            android:src="@drawable/ic_video_gallery"
            app:layout_constraintBottom_toBottomOf="@+id/add_media_button"
            app:layout_constraintEnd_toStartOf="@+id/add_media_button"
            app:layout_constraintTop_toTopOf="@+id/add_media_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

</FrameLayout>